--- a/React/Amen.css
+++ b/React/Amen.css
@@ -1,32 +1,42 @@
 .AmenCard{
     width: 600px;
-    height: 350px;
-    text-align: center; 
+    height: 300px;
     margin: 1.5rem;
-    padding: 5px;
-    background-color:rgb(255, 255, 255);
     box-shadow: 7px 10px 12px -5px rgba(0,0,0.56);
-    opacity: 0.80;
-    
+    overflow: hidden;
+    position: relative;
 }
-div:hover{
+.AmenCard_back{
+    background-image: url("card.jpg");
+    opacity: 0.75;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transition: .3s;
+}
+.AmenCard_back:hover{
     opacity: 1.0;
-    transition: .5s;
+    /*transform: scale(1.1);*/
 }
+
+
 
 .AmenCard_Title{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     margin-top: 5PX;
+    font-size: 250%;
+    padding: 10px;
+   text-transform: capitalize;
+    
 }
 
 .AmenCard_Content{
     font-size: x-large;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 10px;
+    text-transform: capitalize;
 }
 
-.AmenCard_Img{
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-}
