--- a/React/invoice.css
+++ b/React/invoice.css
@@ -1,17 +1,21 @@
-body{
-    background-image: url("checkout.jpg");
+.invoice_Bacground{
+    background-image:url("checkout.jpg");
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-
+      background-size: cover;
+      background-position: center ;
 }
-h1 { font: bold 100%; letter-spacing: 0.5em; text-align: center; background-color: red; color: white; }
-.cont1 {
-    max-width: 844.88px;
-    padding: 16px;
+
+
+.invoice_Container{
     background-color: white;
-    margin: auto;
-    
+    margin-top: 5px;
+
 }
 
-
+.invoice_Title{
+    font-family:'Times New Roman', Times, serif;
+    font-weight: bolder;
+    text-align: center;
+    background-color: red;
+    color: white;
+}
